fix flex alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ html, body {
 
 .keys {
   display: flex;
+  flex: 1;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
